--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <ul class="flex g-3">
                 <li><a class="nav-link" href="#">Home</a></li>
-                <li><a class="nav-link" href="https://amici.ph/collections/appetizer">Amicci Official Site</a></li>
+                <li><a class="nav-link" href="https://amici.ph/collections/appetizer" target="_blank">Amicci Official Site</a></li>
                 <li><a class="nav-link" href="about.html">About Us</a></li>
                 <li><a class="nav-link" href="#email">Email</a></li>
             </ul>
