--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
                 <li><a class="nav-link" href="index.html">Home</a></li>
                 <li><a class="nav-link" href="https://amici.ph/collections/appetizer" target="_blank">Amicci Official Site</a></li>
                 <li><a class="nav-link" href="#">About Us</a></li>
-                <li><a class="nav-link" href="#email">Email</a></li>
+                <li><a class="nav-link" href="index.html#email">Email</a></li>
             </ul>
         </div>
     </header>
