Final final final commit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <header class="mb-3">
         <div class="flex f-col align-center">
             <div class="logo">
-                <img src="https://scontent.fdvo2-2.fna.fbcdn.net/v/t39.30808-6/280548846_5731616923517338_2564262972743888594_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=a2f6c7&_nc_ohc=L5PUM386aiYAX_zMXzB&_nc_ht=scontent.fdvo2-2.fna&oh=00_AfAloBPy8mAvwcHoixuK1Cy_9coo4ze5U-pQX0tQujxOfQ&oe=64FE8A14" alt="logo" width="100px">
+                <a href="#logo">
+                    <img src="https://scontent.fdvo2-2.fna.fbcdn.net/v/t39.30808-6/280548846_5731616923517338_2564262972743888594_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=a2f6c7&_nc_ohc=L5PUM386aiYAX_zMXzB&_nc_ht=scontent.fdvo2-2.fna&oh=00_AfAloBPy8mAvwcHoixuK1Cy_9coo4ze5U-pQX0tQujxOfQ&oe=64FE8A14" alt="logo" width="100px">
+                </a>
             </div>
             <ul class="flex g-3">
                 <li><a class="nav-link" href="#">Home</a></li>
@@ -33,12 +35,15 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ex commodi asperiores molestiae molestias quaerat tempora, illum dicta. Reiciendis temporibus dignissimos voluptate, porro optio consequatur id ab esse impedit laudantium.
             </p>
         </div>
-        <div class="custom-p mx-custom" id="email">
+        <div class="custom-p mx-custom flex align-center f-col" id="email">
             <h2 class="mb-5">Are you having fun?</h2>
             <a class="active flex align-center" href="mailto:casipongdaniel14@gmail.com">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg>
                 <span class="mx-2">Email me now</span>
             </a>
+            <div id="logo">
+                <img src="https://scontent.fdvo2-2.fna.fbcdn.net/v/t39.30808-6/280548846_5731616923517338_2564262972743888594_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=a2f6c7&_nc_ohc=L5PUM386aiYAX_zMXzB&_nc_ht=scontent.fdvo2-2.fna&oh=00_AfAloBPy8mAvwcHoixuK1Cy_9coo4ze5U-pQX0tQujxOfQ&oe=64FE8A14" alt="logo" width="500px">
+            </div>
         </div>
     </main>
     <footer class="my-3 text-center o-1">
