--- a/about.html
+++ b/about.html
@@ -11,7 +11,9 @@
     <header class="mb-3">
         <div class="flex f-col align-center">
             <div class="logo">
-                <img src="https://scontent.fdvo2-2.fna.fbcdn.net/v/t39.30808-6/280548846_5731616923517338_2564262972743888594_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=a2f6c7&_nc_ohc=L5PUM386aiYAX_zMXzB&_nc_ht=scontent.fdvo2-2.fna&oh=00_AfAloBPy8mAvwcHoixuK1Cy_9coo4ze5U-pQX0tQujxOfQ&oe=64FE8A14" alt="logo" width="100px">
+                <a href="index.html#logo">
+                    <img src="https://scontent.fdvo2-2.fna.fbcdn.net/v/t39.30808-6/280548846_5731616923517338_2564262972743888594_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=a2f6c7&_nc_ohc=L5PUM386aiYAX_zMXzB&_nc_ht=scontent.fdvo2-2.fna&oh=00_AfAloBPy8mAvwcHoixuK1Cy_9coo4ze5U-pQX0tQujxOfQ&oe=64FE8A14" alt="logo" width="100px">
+                </a>
             </div>
             <ul class="flex g-3">
                 <li><a class="nav-link" href="index.html">Home</a></li>
